<resources>
    <string name="app_name">ParkPal</string>
    <string name="title_search">Search</string>
    <string name="title_map">Map</string>
    <string name="title_recommendations">Recommendations</string>
    <string name="title_logout">Log out</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_activity_login">ParkPal Sign in/Sign up</string>
    <string name="title_placeholder">Placeholder</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="text_or">or</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>

    <!-- Strings related to registration -->
    <string name="prompt_firstname">First Name</string>
    <string name="prompt_lastname">Last Name</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_zip">Zip Code</string>
    <string name="prompt_dob">Birthday</string>

    <!-- Strings related to preferences -->
    <string name="preferences">Preferences</string>
    <string name="prefs_kids">Kid Friendly</string>
    <string name="prefs_dogs">Dog Friendly</string>
    <string name="prefs_watersports">Watersports</string>
    <string name="prefs_extreme">Extreme Sports</string>
    <string name="prefs_hiking">Hiking</string>
    <string name="prefs_camping">Camping</string>
    <string name="prefs_forest">Forest</string>
    <string name="prefs_desert">Desert</string>
    <string name="prefs_mountain">Mountain</string>
    <string name="prefs_beach">Beach</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="OpenWeatherApiKey">0cadf31092cc58df058ab3572067222b</string>
    <string name="title_activity_park_details">ParkDetails</string>
    <string name="title_activity_add_park_note">AddParkNoteActivity</string>
</resources>
