<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.psu.sweng500.team4.parkpal.RegisterActivity">

    <!-- Registration progress -->
    <ProgressBar
        android:id="@+id/registration_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/registration_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_registration_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="First Name"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp" />

            <EditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Last Name"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="59dp" />

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="User Name"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="229dp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Email"
                android:inputType="textEmailAddress"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="102dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Password"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="282dp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="315dp" />

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Confirm Password"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="358dp" />

            <EditText
                android:id="@+id/conPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="391dp" />

            <EditText
                android:id="@+id/birthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Date of Birth"
                android:inputType="date"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="143dp" />

            <EditText
                android:id="@+id/zipCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="ZIP CODE"
                android:inputType="number"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="186dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/preferences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/preferences"
                android:textAlignment="center"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/prefs_kids"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prefs_kids"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Switch
                android:id="@+id/prefs_dogs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prefs_dogs"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />
            <Switch
                android:id="@+id/prefs_watersports"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prefs_watersports"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Switch
                android:id="@+id/prefs_hiking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prefs_hiking"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Switch
                android:id="@+id/prefs_camping"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prefs_camping"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Switch
                android:id="@+id/prefs_forest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prefs_forest"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Switch
                android:id="@+id/prefs_mountain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prefs_mountain"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Switch
                android:id="@+id/prefs_desert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prefs_desert"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Switch
                android:id="@+id/prefs_beach"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prefs_beach"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SUBMIT"
                tools:layout_editor_absoluteX="148dp"
                tools:layout_editor_absoluteY="447dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
